# Swarm-UI

./: .gitignore  BUGFIX-STATUS.md  README.md  index.html  package-lock.json  package.json  plan.md  swarm-ui.desktop  tailwind.config.js
.claude/: gsd-file-manifest.json
docs/plans/: 2026-02-19-sprite-management-ui-design.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  sprites_api.rs  sprites_ws.rs  state.rs
src-tauri/src/commands/: agent.rs  filesystem.rs  git.rs  mod.rs  process.rs  pty.rs  session.rs  sprite.rs  team.rs
src-tauri/src/parsers/: jsonl_parser.rs  mod.rs  session_types.rs
src-tauri/src/search/: doc_ext.rs  indexer.rs  mod.rs  queries.rs  schema.rs  types.rs  watcher.rs
src-tauri/src/sprite/: cli.rs  mod.rs  pool.rs
src-tauri/src/watchers/: jsonl_watcher.rs  mod.rs  pool_watcher.rs  team_watcher.rs
src/components/: ErrorBoundary.tsx
src/components/diff/: DiffViewer.tsx  FileChangeList.tsx
src/components/layout/: AppShell.tsx  PaneGrid.tsx  Sidebar.tsx  Toolbar.tsx
src/components/session/: ContextBar.tsx  HighlightText.tsx  SessionCard.tsx  SessionDetail.tsx  SessionList.tsx  SmithPanel.tsx  StatusBadge.tsx  SteeringInput.tsx
src/components/settings/: SettingsPanel.tsx
src/components/sprite/: BotPoolCard.tsx  BotPoolView.tsx  ConfirmationModal.tsx  SpriteActionBar.tsx  SpriteExpandedPanel.tsx  SpriteGrid.tsx  SpriteList.tsx  StatusBadge.tsx  WakingOverlay.tsx
src/components/sprite/hooks/: useAutoWake.ts
src/components/sprite/tabs/: CheckpointTab.tsx  FilesTab.tsx  InfoTab.tsx  ServiceTab.tsx  SessionTab.tsx
src/components/team/: TeamList.tsx
src/components/terminal/: AgentPicker.tsx  SpriteTerminal.tsx  TerminalPane.tsx
src/hooks/: useLayout.ts  useSession.ts  useSessionSearch.ts  useTerminal.ts
src/stores/: layoutStore.ts  modalStore.ts  sessionStore.ts  settingsStore.ts  spriteStore.ts  teamStore.ts  terminalStore.ts
src/types/: session.ts  sprite.ts  team.ts  terminal.ts
