[package]
name = "swarm-ui"
version = "0.1.0"
description = "Linux AgentHub: Multi-terminal session monitor with sprites.dev swarm integration"
authors = ["Anansitrading"]
edition = "2021"

[lib]
name = "swarm_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
notify = "7"
notify-debouncer-mini = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
libc = "0.2"
thiserror = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
tauri-plugin-store = "2"
url = "2"
base64 = "0.22"
futures-util = "0.3"
tauri-plugin-dialog = "2.6.0"
